# libmumble

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Doxyfile  Makefile  client
cmake/: FindLibEV.cmake  FindProtobufC.cmake  GoogleProtoCC.cmake
include/: buffer.h  channel.h  connection.h  log.h  mumble.h  packets.h  protocol.h  server.h  user.h
include/mumble/: channel.h  external.h  mumble.h  server.h  user.h
src/: buffer.c  buffer.h  channel.c  client.c  connection.c  internal.h  iserver.h  log.c  log.h  mumble.c  packets.c  packets.h  protocol.c  protocol.h  server.c  user.c
